# numerics-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: interp.rs  lib.rs
src/root_finding/: bisection.rs  brent.rs  builder.rs  convergencelog.rs  mod.rs  newton_raphson.rs  secant.rs
tests/: convergencelog.rs  interp.rs  root_finding.rs
