[package]
name = "numerics-rs"
version = "0.1.0"
edition = "2021"
description = "Blazing fast numerical library written in pure Rust"
repository = "https://github.com/grmikh/numerics-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
