[package]
name = "numerics-rs"
version = "1.0.2"
edition = "2021"
description = "Blazing fast numerical library written in pure Rust"
repository = "https://github.com/grmikh/numerics-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/numerics-rs"
authors = [
    "Grigory Mikheev <grigory.mikheev@gmail.com>",
]
keywords = ["solving", "interpolation", "spline", "root-finding"]
categories = ["mathematics"]

[lib]
name = "numerics_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]